# haskube

./: .gitignore  LICENSE  NOTES  README.md  haskube.cabal
haskube/: .gitignore  README.md  default.nix  haskube.cabal
haskube-client/: .gitignore  NOTES  README.md  haskube-client.cabal  stack.yaml
haskube-client/app/: KubeAuth.hs  KubeConfig.hs  KubeTurtle.hs  Main.hs  Types.hs
haskube-client/src/: Lib.hs
haskube-gen/: .gitignore  NOTES  haskube-gen.cabal
haskube-gen/src/: Main.hs
haskube-gen/src/Util/: Trie.hs
haskube-gen/template/: built-ins.hs
haskube-web/: README.md  haskube-web.cabal  work-ghc.nix
haskube-web/src/: Main.hs
haskube-web/src/Backend/: Types.hs
haskube-web/src/Web/: Layout.hs  Solarized.hs  Style.hs  Styles.hs
src/: Main.hs
