name:                haskube-client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/caascade/haskube/haskube-client#readme
license:             BSD3
license-file:        LICENSE
author:              Kynan Rilee
maintainer:          kynan.rilee@gmail.com
copyright:           Copyright (c) 2017 Kynan Rilee
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       aeson
                     , aeson-pretty
                     , lens-aeson
                     , base
                     , bytestring
                     , connection
                     , containers
                     , haskube
                     , http-client
                     , http-client-tls
                     , lens
                     , mtl
                     , text
                     , time
                     , transformers
                     , turtle
                     , unordered-containers
                     , vector
                     , wreq
                     , yaml
  default-language:    Haskell2010

executable haskube-client
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , aeson-pretty
                     , lens-aeson
                     , base
                     , bytestring
                     , connection
                     , containers
                     , haskube-client
                     , haskube
                     , http-client
                     , http-client-tls
                     , lens
                     , mtl
                     , text
                     , time
                     , transformers
                     , turtle
                     , unordered-containers
                     , vector
                     , wreq
                     , yaml
  default-language:    Haskell2010

test-suite haskube-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskube-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
