name:                haskube-gen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/caascade/haskube/haskube-gen#readme
license:             BSD3
license-file:        LICENSE
author:              Kynan Rilee
maintainer:          kynan.rilee@gmail.com
copyright:           Copyright (c) 2017 Kynan Rilee
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskube-gen
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , ede
                     , haskell-src-exts
                     , insert-ordered-containers
                     , lens
                     , lens-aeson
                     , mtl
                     , parsec
                     , pretty
                     , pretty-show
                     , swagger2
                     , text
                     , transformers
                     , unordered-containers
