name:                haskube-web
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ublubu/haskube
license:             BSD3
license-file:        LICENSE
author:              Kynan Rilee
maintainer:          kynan.rilee@gmail.com
copyright:           Copyright (c) 2017 Kynan Rilee
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable haskube-web
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , bytestring
                     , containers
                     , haskube
                     , lens
                     , mtl
                     , reflex
                     , reflex-dom
                     , text
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ublubu/haskube/haskube-web
