name:                haskube
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/caascade/haskube/haskube#readme
license:             BSD3
license-file:        LICENSE
author:              Kynan Rilee
maintainer:          kynan.rilee@gmail.com
copyright:           Copyright (c) 2017 Kynan Rilee
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Api.Admissionregistration.V1alpha1
                     , Api.Admissionregistration.V1beta1
                     , Api.Apps.V1
                     , Api.Apps.V1beta1
                     , Api.Apps.V1beta2
                     , Api.Authentication.V1
                     , Api.Authentication.V1beta1
                     , Api.Authorization.V1
                     , Api.Authorization.V1beta1
                     , Api.Autoscaling.V1
                     , Api.Autoscaling.V2beta1
                     , Api.Batch.V1
                     , Api.Batch.V1beta1
                     , Api.Batch.V2alpha1
                     , Api.Certificates.V1beta1
                     , Api.Core.V1
                     , Api.Events.V1beta1
                     , Api.Extensions.V1beta1
                     , Api.Networking.V1
                     , Api.Policy.V1beta1
                     , Api.Rbac.V1
                     , Api.Rbac.V1alpha1
                     , Api.Rbac.V1beta1
                     , Api.Scheduling.V1alpha1
                     , Api.Settings.V1alpha1
                     , Api.Storage.V1
                     , Api.Storage.V1alpha1
                     , Api.Storage.V1beta1
                     , Apiextensions_apiserver.Pkg.Apis.Apiextensions.V1beta1
                     , Apimachinery.Pkg.Api.Resource
                     , Apimachinery.Pkg.Apis.Meta.V1
                     , Apimachinery.Pkg.Runtime
                     , Apimachinery.Pkg.Util.Intstr
                     , Apimachinery.Pkg.Version
                     , Kube_aggregator.Pkg.Apis.Apiregistration.V1beta1
                     , Kubernetes.Pkg.Api.V1
                     , Kubernetes.Pkg.Apis.Admissionregistration.V1alpha1
                     , Kubernetes.Pkg.Apis.Apps.V1beta1
                     , Kubernetes.Pkg.Apis.Authentication.V1
                     , Kubernetes.Pkg.Apis.Authentication.V1beta1
                     , Kubernetes.Pkg.Apis.Authorization.V1
                     , Kubernetes.Pkg.Apis.Authorization.V1beta1
                     , Kubernetes.Pkg.Apis.Autoscaling.V1
                     , Kubernetes.Pkg.Apis.Batch.V1
                     , Kubernetes.Pkg.Apis.Batch.V2alpha1
                     , Kubernetes.Pkg.Apis.Certificates.V1beta1
                     , Kubernetes.Pkg.Apis.Extensions.V1beta1
                     , Kubernetes.Pkg.Apis.Networking.V1
                     , Kubernetes.Pkg.Apis.Policy.V1beta1
                     , Kubernetes.Pkg.Apis.Rbac.V1alpha1
                     , Kubernetes.Pkg.Apis.Rbac.V1beta1
                     , Kubernetes.Pkg.Apis.Settings.V1alpha1
                     , Kubernetes.Pkg.Apis.Storage.V1
                     , Kubernetes.Pkg.Apis.Storage.V1beta1
                     , Kubernetes.Types.Base
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , text
                     , time
                     , unordered-containers
